# pbin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: android-aarch64.yml  android-armv7.yml  android-x86_64.yml  ci.yml  freebsd-aarch64.yml  freebsd-x86_64.yml  ios-aarch64.yml  linux-aarch64.yml  linux-armv7.yml  linux-i686.yml  linux-loongarch64.yml  linux-mips64.yml  linux-musl-aarch64.yml  linux-musl-x86_64.yml  linux-ppc64le.yml  linux-riscv64.yml  linux-s390x.yml  linux-x86_64.yml  macos-aarch64.yml  macos-x86_64.yml  netbsd-x86_64.yml  openbsd-x86_64.yml  tests.yml  wasi-wasm32.yml  windows-aarch64.yml  windows-x86.yml  windows-x86_64.yml
crates/pbin-compress/: Cargo.toml
crates/pbin-compress/src/: bcj.rs  delta.rs  dict.rs  error.rs  lib.rs  pipeline.rs  segment.rs
crates/pbin-core/: Cargo.toml
crates/pbin-core/src/: error.rs  header.rs  lib.rs  manifest.rs  target.rs
crates/pbin-pack/: Cargo.toml
crates/pbin-pack/src/: main.rs
crates/pbin-stub/: Cargo.toml  build.rs
crates/pbin-stub/src/: generator.rs  lib.rs
crates/pbin-unpack/: Cargo.toml
crates/pbin-unpack/src/: main.rs
examples/: hello.pbin
scripts/: benchmark.sh  build-all-targets.sh
spec/: PBIN_FORMAT.md
stubs/: polyglot.template
test-payload/hello/: Cargo.toml
test-payload/hello/src/: main.rs
