[package]
name = "pbin-pack"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool to pack binaries into PBIN format"

[[bin]]
name = "pbin-pack"
path = "src/main.rs"

[dependencies]
pbin-core.workspace = true
pbin-stub.workspace = true
pbin-compress.workspace = true
